--- a/planning/Vortrag/LandingPlanes_1597_SS2017_Vortrag.tex
+++ b/planning/Vortrag/LandingPlanes_1597_SS2017_Vortrag.tex
@@ -1248,7 +1248,7 @@ N$\rightarrow$S (0$^\circ$) & 734 & \cellcolor{red!25} 16 & 8 & \cellcolor{red!2
 \end{frame}
 
 \subsection{Analyse mittels Profiler}
-\begin{frame}
+\begin{frame}{Laufzeitanalyse mittels Profiler}
 
     		\begin{itemize}
     		\item Laufzeitanalyse mittels gproof
@@ -1260,14 +1260,32 @@ N$\rightarrow$S (0$^\circ$) & 734 & \cellcolor{red!25} 16 & 8 & \cellcolor{red!2
 
 \end{frame}
 \subsection{Einfluss von Compiler Direktiven (speziell Optimizer)}
-\begin{frame}
-Bevor Codeausführung mittels Parallelverarbeitung zur Beschleunigung gebracht werden soll, lohnt es sich meist, durch geeignete Compilerdirektiven die serielle Codeausführung zu beschleunigen.
+\begin{frame}{Einfluss des Optimizers}
 
-Der Code wurde mit einem gcc Version 4.8.5 devtoolset version 4 compiliert. Per default findet dabei eine Übersetzung ohne eingeschalteten Optimizer statt. 
-Durch die Benutzung des -O3 Optimizer Direktivs ist eine Codebeschleunigung von 1300~\% (11 sec vs. 147 sec) beobachtet worden. 
-Eine Übersicht über die verwendeten Optimierungsschritte sind unter \footnote{\url{https://gcc.gnu.org/onlinedocs/gcc/Optimize-Options.html}} einzusehen.
+    		\begin{itemize}
+    		\item redhat devtoolset 4
+    		\item gcc / g++ Version 4.8.5
+    		\item -O3 Direktiv aktiviert Optimizer 
+    		\end{itemize}
+    		
 \end{frame}
+\begin{frame}{Einfluss des Optimizers}
 
+    		\begin{itemize}
+    		\item redhat devtoolset 4
+    		\item gcc / g++ Version 4.8.5
+    		\item -O3 Direktiv aktiviert Optimizer 
+    		\end{itemize}
+    		
+    		  	\skippingparagraph 
+    		  		\begin{itemize}
+    		  		\item  Beschleunigung der Codeausführung\\ 
+    		  		     um 1300~\% (11 s vs. 147 s)
+    		  		\end{itemize}
+	%\begin{tabular}{l}
+%		\pause - Beschleunigung der Codeausführung um 1300~\% (11 s vs. 147 s) \\
+%	\end{tabular} 
+\end{frame}
 \section{Komponente "`databaseManager"'}
 
 \begin{frame} {dataBaseManager}{Überblick}
