--- a/planning/Vortrag/LandingPlanes_1597_SS2017_Vortrag.tex
+++ b/planning/Vortrag/LandingPlanes_1597_SS2017_Vortrag.tex
@@ -151,8 +151,17 @@
 \setcounter{framenumber}{\value{framenumber}-1}	%no idea why it otherwise skips one page
 \section{Aufgabenstellung}
 
-\begin{frame} {Title}{Subtitle}
+\begin{frame}{Aufgabenstellung}{}
 	
+	\begin{itemize}[<+->]
+		\item<+-> potentielle Notlandebahnen aus Geoterraindaten
+		\item<+-> Landebahn definiert über Mindestlänge und - breite
+		\item<+-> Akzeptanzktierien Gesamtsteigung, Holprigkeit und Querneigung
+		\item<+-> Ausrichtungswinkel der Landebahn (Windrichtung)
+		\item<+-> Eingabedaten liegen im GeoTiff Format vor
+		\item<+-> Multithreading zur Beschleunigung (p\_threads)
+		\item<+-> Analyse des Speedups
+	\end{itemize}
 
 
 	\note{
@@ -166,23 +175,23 @@
 
 \end{frame}
 
-\begin{frame} {titel}
+%\begin{frame} {titel}
 	
-\begin{itemize}[<+->]
-	\item<1-> 
-	\begin{itemize}[<+->]
-		\item<+-> 
-		\item<+-> 
-		\item<+-> 
-		\item<+-> 
-	\end{itemize}
-	\item<+-> 
-\end{itemize}
+%\begin{itemize}[<+->]
+%	\item<1-> 
+%	\begin{itemize}[<+->]
+%		\item<+-> 
+%		\item<+-> 
+%		\item<+-> 
+%		\item<+-> 
+%	\end{itemize}
+%	\item<+-> 
+%\end{itemize}
 
-\note{
+%\note{
 	
-}
-\end{frame}
+%}
+%\end{frame}
 	
 \section{Architektur}
 
