--- a/planning/Vortrag/LandingPlanes_1597_SS2017_Vortrag.tex
+++ b/planning/Vortrag/LandingPlanes_1597_SS2017_Vortrag.tex
@@ -20,7 +20,7 @@
 	\setbeamercovered{transparent}
 	% or whatever (possibly just delete it)
 %	\setbeameroption{show notes} % un-comment to see the notes
-%	\setbeameroption{show notes on second screen=right}
+	\setbeameroption{show notes on second screen=right}
 }
 
 
@@ -314,7 +314,8 @@
 		\item gute Parallelisierungsmöglichkeiten für Number Crunching
 		\item gute Bibliotheksunterstützung in der Geo-Data Community
 		\end{itemize}
-
+	
+	\pause
 	\item HTML/React für das userInterface
 		\begin{itemize}
 		\item Standard-Webtechnologien zur Realisierung des View
@@ -323,6 +324,7 @@
 		\item Vorwissen für GUI-Realisierung
 		\end{itemize}
 
+	\pause
 	\item Node.js/Javascript für den dataBaseManager
 		\begin{itemize}
 		\item Leichte Integration der Schnittstellen zu anderen Komponenten
@@ -366,8 +368,6 @@
 
 \end{frame}
 
-
-\section{Komponentenüberblick}
 \begin{frame} {Komponentenübersicht}{}
 	
 Überblick über die Implementierung der einzelnen Komponenten.
@@ -393,7 +393,10 @@
 
 \end{frame}
 
-\subsection{Komponente "`searchEngine"'}
+\section{Komponente "`searchEngine"'}
+
+
+\subsection{Überblick}
 
 \begin{frame} {Komponente "`searchEngine"'}{Überblick}
 	
@@ -623,7 +626,7 @@
 	\begin{itemize}
 	\item \texttt{gdalinfo} als Dienstrogramm zur Abfrage der Metadaten eines GeoTIFF
 	\item Umrechnung von Geo-Koordinaten im \texttt{WGS84}-System in Pixel-Koordinaten
-	\item Umrechnung von Pixel-Koordinaten in  Geo-Koordinaten im \texttt{WGS84}-System
+	\item Umrechnung von Pixel-Koordinaten in  Geo-Koordinaten in das \texttt{WGS84}-System
 	\end{itemize}
 	
 
@@ -912,11 +915,11 @@
 	
 	\note{
 		\begin{itemize}
-			\item typisch: pthread_create, pthread_exit, pthread_cancel, pthread_join , pthread_detach
-			\item mutex: pthread_mutex_init, pthread_mutex_destroy, pthread_mutex_lock, pthread_mutex_trylock, pthread_mutex_unlock 
-			\item condition variables: pthread_cond_init, pthread_cond_destroy, werden benutzt um Threadverhalten in Datenabhängigkeit zu steuern (ohne teures Polling)
+			\item typisch: pthread\_create, pthread\_exit, pthread\_cancel, pthread\_join , pthread\_detach
+			\item mutex: pthread\_mutex\_init, pthread\_mutex\_destroy, pthread\_mutex\_lock, pthread\_mutex\_trylock, pthread\_mutex\_unlock 
+			\item condition variables: pthread\_cond\_init, pthread\_cond\_destroy, werden benutzt um Threadverhalten in Datenabhängigkeit zu steuern (ohne teures Polling)
 			\item Empfehlung: Kurs 01727 Mitautor anwesend 
-			\was nicht inbegriffen sind Semaphoren. Eine Art Mutex, die allerdings einen Zähler beinhaltet. Mutex ist quasi ein binäres Semaphor
+			\item was nicht inbegriffen sind Semaphoren. Eine Art Mutex, die allerdings einen Zähler beinhaltet. Mutex ist quasi ein binäres Semaphor
 		\end{itemize}
 	}
 
@@ -1638,12 +1641,18 @@ N$\rightarrow$S (0$^\circ$) & 734 & \cellcolor{red!25} 16 & 8 & \cellcolor{red!2
 	
 	Als Benutzeroberfläche wurde ein Webclient auf Basis von React/Redux implementiert.
 	
+	\pause
 	Gründe für die Implementierung eines Webclient:
 	\begin{itemize}
+	\pause
 	\item Viele vorgefertigte Komponenten zur Kartendarstellung
+	\pause
 	\item Läuft auf jedem modernen Browser
+	\pause
 	\item Geräteunabhängigkeit
+	\pause
 	\item Betriebssystemunabhängigkeit
+	\pause
 	\item kein Vorwissen in der Arbeitsgruppe zur QT-Programmierung
 	\end{itemize}
 
@@ -1682,7 +1691,7 @@ N$\rightarrow$S (0$^\circ$) & 734 & \cellcolor{red!25} 16 & 8 & \cellcolor{red!2
 
 \begin{frame} {Komponente "`landingClient"'}{Grundlegende Funktionsweise}
 	
-	Grunbdlegende Arbeitsweise des \texttt{landingClient}:
+	Grundlegende Arbeitsweise des \texttt{landingClient}:
 	\begin{itemize}
 	\item asynchrone HTTP-Kommunikation mit der REST-API des \texttt{dataBaseManager}
 	\item Absetzen von Kommandos und Anfragen per JSON
@@ -1730,9 +1739,11 @@ N$\rightarrow$S (0$^\circ$) & 734 & \cellcolor{red!25} 16 & 8 & \cellcolor{red!2
 
 	\pause		
 	Anzeige der Ausdehnung des Datensatzes:
-	\begin{figure}
-		\includegraphics[width=0.7\textwidth]{images/LandingClient_Screen_Ueberblick.png}
-	\end{figure}
+	\visible<2>{
+		\begin{figure}
+			\includegraphics[width=0.7\textwidth]{images/LandingClient_Screen_Ueberblick.png}
+		\end{figure}
+	}
 	
 
 	\note{
@@ -1747,15 +1758,16 @@ N$\rightarrow$S (0$^\circ$) & 734 & \cellcolor{red!25} 16 & 8 & \cellcolor{red!2
 	
 	"'Workflow"':
 	
-	\begin{figure}
-		\includegraphics[width=\textwidth]{images/LandingClient_Parameter.png}
-	\end{figure}
-
 	\begin{itemize}
 	\item Wähle Datei aus
 	\item Suche zu durchmusternden Ausschnitt 
 	\item Lege Durchmusterungs-Parameter fest
 	\item (Bestimme Anzahl Threads)
+	\end{itemize}	
+		\begin{figure}
+			\includegraphics[width=\textwidth]{images/LandingClient_Parameter.png}
+		\end{figure}
+	\begin{itemize}
 	\item Rufe Ergebnisse ab oder Verschiebe Karte
 	\item Benutze die Filter
 	\end{itemize}
@@ -1906,7 +1918,6 @@ N$\rightarrow$S (0$^\circ$) & 734 & \cellcolor{red!25} 16 & 8 & \cellcolor{red!2
 	leicht schief dazu liegende potentielle Landebahnen.
 
 
-
 \end{frame}
 
 \begin{frame} {{Richtungskorrektur des GeoTIFF}}{Möglichkeit zur Korrektur}
@@ -1934,6 +1945,20 @@ N$\rightarrow$S (0$^\circ$) & 734 & \cellcolor{red!25} 16 & 8 & \cellcolor{red!2
 		Beide Methoden lassen sich in die \texttt{GeoTiffHandler}-API integrieren.
 		
 		Es liegt ein Trade-Off zwischen höherem Rechenaufwand und notwendiger Genauigkeit vor.
+		
+		\note{
+			\begin{itemize}
+				\item Abweichungen in der NRW Karte viel größer als in der Hamburg Karte
+				\item Demo:
+				\item 
+				\item Lade Hamburg-Karte
+				\item Zoome auf Finkenwerder
+				\item Lasse für 50° scannen und schalte Filter ein
+				\item deutlich geringere Abweichung als in Geilenkirchen
+			\end{itemize}
+		}
+	
+		
 	
 
 \end{frame}
@@ -2002,7 +2027,7 @@ N$\rightarrow$S (0$^\circ$) & 734 & \cellcolor{red!25} 16 & 8 & \cellcolor{red!2
 	\end{itemize}
 	
 	\pause
-	Erwartete Performanz-Steigerung um Größenordnungen, da kein DB-zugriff mehr benötigt wird.
+	Erwartete Performanz-Steigerung um Größenordnungen, da kein DB-Zugriff mehr benötigt wird.
 
 	\note{
 		\begin{itemize}
@@ -2051,6 +2076,17 @@ N$\rightarrow$S (0$^\circ$) & 734 & \cellcolor{red!25} 16 & 8 & \cellcolor{red!2
 
 \end{frame}
 
+
+\begin{frame}{Vielen Dank!}{Kein Vortrag ohne Katzenfotos}
+	\begin{center}
+%		\includegraphics[height=.8\textheight]{images/cat_with_Logo_HannoverJs.png}
+		\includegraphics[height=.8\textheight]{images/cat_with_Logo_FernUni.png}
+
+	\source{Katze aus \url{http://wallpapersinhq.online/20777-smiling_kitten_cats_tabby_cat_hd_wallpaper/}}
+	\end{center}
+
+
+\end{frame}
 	
 \end{document}
 
