--- a/planning/Vortrag/LandingPlanes_1597_SS2017_Vortrag.tex
+++ b/planning/Vortrag/LandingPlanes_1597_SS2017_Vortrag.tex
@@ -953,7 +953,7 @@
 	}
 \end{frame}
 
-\begin{frame}{paralleles Suchen der Landebahnen}{Thread-Pool}
+\begin{frame}{Paralleles Suchen der Landebahnen}{Thread-Pool}
 \begin{figure}
 \centering
 \begin{tikzpicture}
@@ -1066,7 +1066,7 @@ Außer dem Allokieren des Vektorspeichers sind die Operationen der Hauptschleife 
 			\item Guest: Centos Linux 7.0, 6 GB RAM
 			\item Variation der virtuellen CPUs des Guest Systems
 			\item Poolgröße über das UI vorgegeben
-			\item pro Parameterset 4 unabhängige Läuft (Mittelwert + Standardabweichung)
+			\item pro Parameterset 4 unabhängige Läufe (Mittelwert + Standardabweichung)
 			
 		\end{itemize}
  	        		\note{
@@ -1389,7 +1389,7 @@ N$\rightarrow$S (0$^\circ$) & 734 & \cellcolor{red!25} 16 & 8 & \cellcolor{red!2
 
     		\begin{itemize}
     		\item Laufzeitanalyse mittels gproof
-    		\item größter Laufzeitanteil für die Zugriffsfunktion (Random Memory acceess)
+    		\item größter Laufzeitanteil für die Zugriffsfunktion (Random Memory access)
     		\item zweitgrößter Anteil ist die Bestimmung der varianzminimalen Landebahn
     		\item intuitiv so zu erwarten
     		\item Potential für inneres Threading beim Auffinden der Landebahn
