--- a/planning/Vortrag/LandingPlanes_1597_SS2017_Vortrag.tex
+++ b/planning/Vortrag/LandingPlanes_1597_SS2017_Vortrag.tex
@@ -944,7 +944,7 @@
 \end{frame}
 
 \subsection{Parallelverarbeitung mittels p\_threads zum Finden der Landebahnen}
-\begin{frame}{Programmiermodlle mit Threads}{}
+\begin{frame}{Programmiermodelle mit Threads}{}
 \pause $\Rightarrow$ Master -  Worker / Slave
 	
 \pause $\Rightarrow$ Peer
@@ -963,10 +963,10 @@
 	
 		\note{
 		\begin{itemize}
-			\item Master / worker: Alle Aufgaben werden an einen neuen Thread vergeben. Master hat Kontrolle
+			\item Master / Worker: Alle Aufgaben werden an einen neuen Thread vergeben. Master hat Kontrolle
 			\item Peer: Master hat keinen Einfluss mehr. Nicht geblockt. Thread Gruppe arbeitet eigenständig ab
 			\item Pipeline: Stufenweises abarbeiten. Jede Stufe ein Thread
-			\item Thread-Pool: ähnlich Master - Worker, aber ein Pool von Threads die nacheinander Aufgaben beim master abholen.
+			\item Thread-Pool: ähnlich Master - Worker, aber ein Pool von Threads die nacheinander Aufgaben beim Master abholen.
 		\end{itemize}
 	}
 \end{frame}
@@ -1122,9 +1122,9 @@ W$\rightarrow$O (90$^\circ$) & 1606 & 1 & 1 & 10442 & 239 \\
 \hline 
 W$\rightarrow$O (90$^\circ$) & 1606 & 64 & 1 & 10094 & 284 \\ 
 \hline 
-NNO$\rightarrow$SSW (45$^\circ$) & 704 & 1 & 1 & 18147 & 327 \\ 
+NO$\rightarrow$SW (45$^\circ$) & 704 & 1 & 1 & 18147 & 327 \\ 
 \hline 
-NNO$\rightarrow$SSW (45$^\circ$) & 704 & 64 & 1 & 18423 & 701 \\ 
+NO$\rightarrow$SW (45$^\circ$) & 704 & 64 & 1 & 18423 & 701 \\ 
 \hline 
 N$\rightarrow$S (0$^\circ$) & 734 & 1 & 2 & 8488 & 46 \\ 
 \hline 
@@ -1136,9 +1136,9 @@ W$\rightarrow$O (90$^\circ$) & 1606 & 1 & 2 & 8668 & 453 \\
 \hline 
 W$\rightarrow$O (90$^\circ$) & 1606 & 2 & 2 & 5778 & 292 \\ 
 \hline 
-NNO$\rightarrow$SSW (45$^\circ$) & 704 & 1 & 2 & 15208 & 216 \\ 
+NO$\rightarrow$SW (45$^\circ$) & 704 & 1 & 2 & 15208 & 216 \\ 
 \hline 
-NNO$\rightarrow$SSW (45$^\circ$) & 704 & 64 & 2 & 8976 & 327 \\ 
+NO$\rightarrow$SW (45$^\circ$) & 704 & 64 & 2 & 8976 & 327 \\ 
 \hline
 N$\rightarrow$S (0$^\circ$) & 734 & 1 & 4 & 8823 & 83 \\ 
 \hline 
@@ -1150,7 +1150,7 @@ N$\rightarrow$S (0$^\circ$) & 734 & 8 & 4 & 3571 & 432 \\
 \hline 
 W$\rightarrow$O (90$^\circ$) & 1606 & 8 & 4 & 3335 & 72 \\ 
 \hline 
-NNO$\rightarrow$SSW (45$^\circ$) & 704 & 8 & 4 & 5406 & 442 \\ 
+NO$\rightarrow$SW (45$^\circ$) & 704 & 8 & 4 & 5406 & 442 \\ 
 \hline
 N$\rightarrow$S (0$^\circ$) & 734 & 16 & 8 & 2733 & 56 \\ 
 \hline 
@@ -1188,9 +1188,9 @@ W$\rightarrow$O (90$^\circ$) & 1606 & 1 & 1 & 10442 & 239 \\
 \hline 
 W$\rightarrow$O (90$^\circ$) & 1606 & 64 & 1 & 10094 & 284 \\ 
 \hline 
-NNO$\rightarrow$SSW (45$^\circ$) & 704 & 1 & 1 & 18147 & 327 \\ 
+NO$\rightarrow$SW (45$^\circ$) & 704 & 1 & 1 & 18147 & 327 \\ 
 \hline 
-NNO$\rightarrow$SSW (45$^\circ$) & 704 & 64 & 1 & 18423 & 701 \\ 
+NO$\rightarrow$SW (45$^\circ$) & 704 & 64 & 1 & 18423 & 701 \\ 
 \hline 
 N$\rightarrow$S (0$^\circ$) & 734 & \cellcolor{red!25} 1 & 2 & \cellcolor{red!25} 8488 & 46 \\ 
 \hline 
@@ -1202,9 +1202,9 @@ W$\rightarrow$O (90$^\circ$) & 1606 & 1 & 2 & 8668 & 453 \\
 \hline 
 W$\rightarrow$O (90$^\circ$) & 1606 & 2 & 2 & 5778 & 292 \\ 
 \hline 
-NNO$\rightarrow$SSW (45$^\circ$) & 704 & 1 & 2 & 15208 & 216 \\ 
+NO$\rightarrow$SW (45$^\circ$) & 704 & 1 & 2 & 15208 & 216 \\ 
 \hline 
-NNO$\rightarrow$SSW (45$^\circ$) & 704 & 64 & 2 & 8976 & 327 \\ 
+NO$\rightarrow$SW (45$^\circ$) & 704 & 64 & 2 & 8976 & 327 \\ 
 \hline
 N$\rightarrow$S (0$^\circ$) & 734 & 1 & 4 & 8823 & 83 \\ 
 \hline 
@@ -1216,7 +1216,7 @@ N$\rightarrow$S (0$^\circ$) & 734 & 8 & 4 & 3571 & 432 \\
 \hline 
 W$\rightarrow$O (90$^\circ$) & 1606 & 8 & 4 & 3335 & 72 \\ 
 \hline 
-NNO$\rightarrow$SSW (45$^\circ$) & 704 & 8 & 4 & 5406 & 442 \\ 
+NO$\rightarrow$SW (45$^\circ$) & 704 & 8 & 4 & 5406 & 442 \\ 
 \hline
 N$\rightarrow$S (0$^\circ$) & 734 & 16 & 8 & 2733 & 56 \\ 
 \hline 
@@ -1254,9 +1254,9 @@ W$\rightarrow$O (90$^\circ$) & 1606 & 1 & 1 & 10442 & 239 \\
 \hline 
 W$\rightarrow$O (90$^\circ$) & 1606 & 64 & 1 & 10094 & 284 \\ 
 \hline 
-NNO$\rightarrow$SSW (45$^\circ$) & 704 & 1 & 1 & 18147 & 327 \\ 
+NO$\rightarrow$SW (45$^\circ$) & 704 & 1 & 1 & 18147 & 327 \\ 
 \hline 
-NNO$\rightarrow$SSW (45$^\circ$) & 704 & 64 & 1 & 18423 & 701 \\ 
+NO$\rightarrow$SW (45$^\circ$) & 704 & 64 & 1 & 18423 & 701 \\ 
 \hline 
 N$\rightarrow$S (0$^\circ$) & 734 &  1 & 2 & 8488 & 46 \\ 
 \hline 
@@ -1268,9 +1268,9 @@ W$\rightarrow$O (90$^\circ$) & 1606 & 1 & 2 & 8668 & 453 \\
 \hline 
 W$\rightarrow$O (90$^\circ$) & 1606 & 2 & 2 & 5778 & 292 \\ 
 \hline 
-NNO$\rightarrow$SSW (45$^\circ$) & 704 & 1 & 2 & 15208 & 216 \\ 
+NO$\rightarrow$SW (45$^\circ$) & 704 & 1 & 2 & 15208 & 216 \\ 
 \hline 
-NNO$\rightarrow$SSW (45$^\circ$) & 704 & 64 & 2 & 8976 & 327 \\ 
+NO$\rightarrow$SW (45$^\circ$) & 704 & 64 & 2 & 8976 & 327 \\ 
 \hline
 N$\rightarrow$S (0$^\circ$) & 734 & \cellcolor{red!25} 1 & 4 & \cellcolor{red!25} 8823 & 83 \\ 
 \hline 
@@ -1282,7 +1282,7 @@ N$\rightarrow$S (0$^\circ$) & 734 & \cellcolor{red!25} 8 & 4 & \cellcolor{red!25
 \hline 
 W$\rightarrow$O (90$^\circ$) & 1606 & 8 & 4 & 3335 & 72 \\ 
 \hline 
-NNO$\rightarrow$SSW (45$^\circ$) & 704 & 8 & 4 & 5406 & 442 \\ 
+NO$\rightarrow$SW (45$^\circ$) & 704 & 8 & 4 & 5406 & 442 \\ 
 \hline
 N$\rightarrow$S (0$^\circ$) & 734 & 16 & 8 & 2733 & 56 \\ 
 \hline 
@@ -1319,9 +1319,9 @@ W$\rightarrow$O (90$^\circ$) & 1606 & 1 & 1 & 10442 & 239 \\
 \hline 
 W$\rightarrow$O (90$^\circ$) & 1606 & 64 & 1 & 10094 & 284 \\ 
 \hline 
-NNO$\rightarrow$SSW (45$^\circ$) & 704 & 1 & 1 & 18147 & 327 \\ 
+NO$\rightarrow$SW (45$^\circ$) & 704 & 1 & 1 & 18147 & 327 \\ 
 \hline 
-NNO$\rightarrow$SSW (45$^\circ$) & 704 & 64 & 1 & 18423 & 701 \\ 
+NO$\rightarrow$SW (45$^\circ$) & 704 & 64 & 1 & 18423 & 701 \\ 
 \hline 
 N$\rightarrow$S (0$^\circ$) & 734 &  1 & 2 & 8488 & 46 \\ 
 \hline 
@@ -1333,9 +1333,9 @@ W$\rightarrow$O (90$^\circ$) & 1606 & 1 & 2 & 8668 & 453 \\
 \hline 
 W$\rightarrow$O (90$^\circ$) & 1606 & 2 & 2 & 5778 & 292 \\ 
 \hline 
-NNO$\rightarrow$SSW (45$^\circ$) & 704 & 1 & 2 & 15208 & 216 \\ 
+NO$\rightarrow$SW (45$^\circ$) & 704 & 1 & 2 & 15208 & 216 \\ 
 \hline 
-NNO$\rightarrow$SSW (45$^\circ$) & 704 & 64 & 2 & 8976 & 327 \\ 
+NO$\rightarrow$SW (45$^\circ$) & 704 & 64 & 2 & 8976 & 327 \\ 
 \hline
 N$\rightarrow$S (0$^\circ$) & 734 &  1 & 4 &  8823 & 83 \\ 
 \hline 
@@ -1347,7 +1347,7 @@ N$\rightarrow$S (0$^\circ$) & 734 &  8 & 4 & 3571 & 432 \\
 \hline 
 W$\rightarrow$O (90$^\circ$) & 1606 & 8 & 4 & 3335 & 72 \\ 
 \hline 
-NNO$\rightarrow$SSW (45$^\circ$) & 704 & 8 & 4 & 5406 & 442 \\ 
+NO$\rightarrow$SW (45$^\circ$) & 704 & 8 & 4 & 5406 & 442 \\ 
 \hline
 N$\rightarrow$S (0$^\circ$) & 734 & \cellcolor{red!25} 16 & 8 & \cellcolor{red!25} 2733 & 56 \\ 
 \hline 
@@ -1387,7 +1387,7 @@ N$\rightarrow$S (0$^\circ$) & 734 & \cellcolor{red!25} 16 & 8 & \cellcolor{red!2
   }; 
     \addlegendentry{Nord-Süd}
   \addlegendentry{Ost-West}
-    \addlegendentry{Nordnordwest-Südsüdost}
+    \addlegendentry{Nordwest-Südost}
   \end{axis} 
 
   \end{tikzpicture}
